- Prevent horizontal scrolling at Home screen on the mobile device. - Broken cargo box images' ratio.

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ html {
 body {
     /* background: #eee; */
     -webkit-font-smoothing: antialiased;
+    max-width: 100%;
     overflow-x: hidden;
 }
 html,
